components/ToggleSwitch.module.css
.toggleSwitch {
    visibility: hidden;
    height: 24px;
    width: 48px;
    min-width: 48px;
    max-width: 48px;
    margin: 0;
    position: relative;
    border-radius: 24px;
    border: none;
}
.toggleSwitch:hover {
    scale: 1.04;
}

.toggleSwitch::before {
    transition: .2s ease-in-out;
    content: "";
    background-color: lightgray;
    visibility: visible;
    width: 100%;
    display: flex;
    height: 100%;
    border-radius: 24px;
    cursor: pointer;
    border: 1px solid rgba(100%, 100%, 100%, 25%);
}
.toggleSwitch:active::before {
    background-color: rgb(243, 243, 243);
}
.toggleSwitch::after {
    transition: .2s ease-in-out;
    visibility: visible;
    content: "";
    display: flex;
    background-color: white;
    aspect-ratio: 1;
    height: calc(100% - 4px);
    position: absolute;
    top: 2px;
    left: 2px;
    border-radius: 100%;
    cursor: pointer;
}

.toggleSwitch:checked::before {
    background-color: rgb(0, 102, 255);
}
.toggleSwitch:active:checked::before {
    background-color: rgb(0, 187, 255);
}
.toggleSwitch:checked::after {
    transform: translateX(100%);
    background-color: white;
    right: calc(50% - 2px);
    left: unset;
}

